tests/ok/while-let-static-nested-payload-owner-state.ari
enum Inner {
  Empty,
  Small(i32),
  Flag(bool),
}

enum Outer {
  Wrap(Inner),
  Other(i64),
  None,
}

fn make_owned(value: i64) -> own i64 {
  return value;
}

fn main() -> i64 {
  let token: own i64 = make_owned(13);
  while let Wrap(Small(2..=4)) = Wrap(Small(3i32)) {
    drop token;
    break;
  }
  return 0;
}
