tests/errors/ownership-aggregate-field-use-after-move.ari
struct Holder {
  token: own i64,
}

fn make_owned(value: i64) -> own i64 {
  return value;
}

fn main() -> i64 {
  let holder = Holder { token: make_owned(1) };
  let first = holder.token;
  let second = holder.token;
  drop first;
  drop second;
  return 0;
}
